Update code generation for project_info.hpp

--- a/examples/01/tests/Makefile
+++ b/examples/01/tests/Makefile
@@ -1,14 +1,16 @@
 PROJECT = TutorialMyMakefile
 TARGET = HelloWorld01-UnitTests
 DESCRIPTION = Unit Tests for the Hello World project
-
-# Compile useing coverage
+# Compile using coverage
 USE_COVERAGE = 1
-
 # Activate cassert
 BUILD_TYPE = debug
 
-# foo.o is compiled object of ../src/foo.c
+P := ../../..
+M := $(P)
+include $(M)/Makefile.header
+
+# foo.o is compiled object from ../src/foo.c
 OBJS += unit-tests.o
 
 # For allowing #include "src/foo.cpp"
@@ -17,6 +19,4 @@ INCLUDES += -I..
 .PHONY: all
 all: $(TARGET)
 
-P := ../../..
-M := $(P)
-include $(M)/MyMakefile
+include $(M)/Makefile.footer
