--- a/examples/01/Makefile
+++ b/examples/01/Makefile
@@ -3,10 +3,14 @@ TARGET = HelloWorld01
 DESCRIPTION = Tutorial 01 for MyMakefile: Hello World project with unit tests
 BUILD_TYPE = release
 
-OBJS += foo.o main.o
+P := ../..
+M := $(P)
+include $(M)/Makefile.header
 
+OBJS += foo.o main.o
+DEFINES += -DFOO -UBAR
 VPATH += src
-INCLUDES += -I/src
+INCLUDES += -Isrc
 
 .PHONY: all
 all: $(TARGET)
@@ -20,6 +24,4 @@ check:
 veryclean: clean
 	@(cd tests && $(MAKE) -s clean)
 
-P := ../..
-M := $(P)
-include $(M)/MyMakefile
+include $(M)/Makefile.footer
