Simplify variable names for shared/static libs

--- a/Makefile.macros
+++ b/Makefile.macros
@@ -44,12 +44,14 @@ TARGET_LOWER_CASE := $(shell echo $(TARGET) | tr A-Z a-z)
 ###################################################
 # Define names for static and shared libraries.
 #
-LIB_TARGET := lib$(TARGET_LOWER_CASE)
 SHORT_LIB_TARGET := -l$(TARGET_LOWER_CASE)
-SYMBOLIC_SHARED_LIB_TARGET := $(LIB_TARGET).$(SO).$(TARGET_MAJOR_VERSION)
-SHARED_LIB_TARGET := $(SYMBOLIC_SHARED_LIB_TARGET).$(TARGET_MINOR_VERSION)
-SYMBOLIC_STATIC_LIB_TARGET := $(LIB_TARGET).a
-STATIC_LIB_TARGET := $(SYMBOLIC_STATIC_LIB_TARGET).$(TARGET_VERSION)
+LIB_TARGET := lib$(TARGET_LOWER_CASE)
+SHARED_LIB_TARGET_NOVERSION := $(LIB_TARGET).$(SO)
+SHARED_LIB_TARGET := $(SHARED_LIB_TARGET_NOVERSION).$(TARGET_VERSION)
+SHARED_LIB_TARGET_MAJOR := $(SHARED_LIB_TARGET_NOVERSION).$(TARGET_MAJOR_VERSION)
+STATIC_LIB_TARGET_NOVERSION :=  $(LIB_TARGET).a
+STATIC_LIB_TARGET := $(STATIC_LIB_TARGET_NOVERSION).$(TARGET_VERSION)
+STATIC_LIB_TARGET_MAJOR := $(STATIC_LIB_TARGET_NOVERSION).$(TARGET_MAJOR_VERSION)
 
 ###################################################
 # Define where to install exec, data, libraries,
@@ -223,10 +225,11 @@ define INSTALL_PROJECT_LIBRARIES
 	@$(call print-to,"Installing","libs","$(LIBDIR)","")
 	@mkdir -p $(LIBDIR)
 	@install -m 644 $(BUILD)/$(STATIC_LIB_TARGET) $(LIBDIR)
-	@ln -snf $(LIBDIR)/$(STATIC_LIB_TARGET) $(LIBDIR)/$(SYMBOLIC_STATIC_LIB_TARGET)
+	@ln -snf $(LIBDIR)/$(STATIC_LIB_TARGET) $(LIBDIR)/$(STATIC_LIB_TARGET_NOVERSION)
+	@ln -snf $(LIBDIR)/$(STATIC_LIB_TARGET) $(LIBDIR)/$(STATIC_LIB_TARGET_MAJOR)
 	@install -m 644 $(BUILD)/$(SHARED_LIB_TARGET) $(LIBDIR)
-	@ln -snf $(LIBDIR)/$(SHARED_LIB_TARGET) $(LIBDIR)/$(SYMBOLIC_SHARED_LIB_TARGET)
-	@ln -snf $(LIBDIR)/$(SYMBOLIC_SHARED_LIB_TARGET) $(LIBDIR)/$(LIB_TARGET).$(SO)
+	@ln -snf $(LIBDIR)/$(SHARED_LIB_TARGET) $(LIBDIR)/$(SHARED_LIB_TARGET_NOVERSION)
+	@ln -snf $(LIBDIR)/$(SHARED_LIB_TARGET) $(LIBDIR)/$(SHARED_LIB_TARGET_MAJOR)
 	@$(call INSTALL_PKG_CONFIG)
 endef
 
