--- a/Makefile.footer
+++ b/Makefile.footer
@@ -93,16 +93,17 @@ endif
 # Static library
 #
 $(STATIC_LIB_TARGET): $(LIB_OBJS) $(THIRDPART_OBJS) $(THIRDPART_LIBS)
-	@$(call print-to,"Static lib","$(TARGET)","$(BUILD)/$@","$(VERSION)")
 ifeq ($(LIB_OBJS),)
 	echo "LIB_OBJS is empty and you requested to created a static lib" && exit 1
 endif
+	@$(call print-to,"Static lib","$(TARGET)","$(BUILD)/$@","$(VERSION)")
 ifneq ($(THIRDPART_LIBS),)
 	@./$(M)/alib.sh $(BUILD) $(THIRDPART_LIBS)
 	$(Q)cd $(BUILD) && $(AR) $(ARFLAGS) $@ $(LIB_OBJS) $(THIRDPART_OBJS) _lib*/*.o && ranlib $@
 else
 	$(Q)cd $(BUILD) && $(AR) $(ARFLAGS) $@ $(LIB_OBJS) $(THIRDPART_OBJS) && ranlib $@
 endif
+	$(Q)cd $(BUILD) && cp $@ $(STATIC_LIB_TARGET_NOVERSION)
 
 ###################################################
 # Shared library
@@ -114,6 +115,7 @@ ifeq ($(LIB_OBJS),)
 endif
 	@$(call print-to,"Shared lib","$(TARGET)","$(BUILD)/$@","$(VERSION)")
 	$(Q)cd $(BUILD) && $(COMPILER) $(LDFLAGS) -o $@ $(LIB_OBJS) $(THIRDPART_OBJS) $(LINK_ALL_LOAD) $(THIRDPART_LIBS) $(NOT_PKG_LIBS) $(PKGCFG_LIBS) $(LINK_NO_ALL_LOAD) $(LINKER_FLAGS)
+	$(Q)cd $(BUILD) && cp $@ $(SHARED_LIB_TARGET_NOVERSION)
 
 ###################################################
 # Generate the pkg-config file
