Emscripten, MacOS bundle, strip
- Manage Emscripten compiler.
- Move appart strip command and condition to disable it (emscripten).
- Move appart MacOS bundle creation macro.
- Add binary extension for MacOS, Window: $(EXT)
- Remove MacOS .app by $(EXT)

--- a/Makefile.footer
+++ b/Makefile.footer
@@ -43,34 +43,26 @@ endif
 endif
 
 ###################################################
-# Create MacOS application bundle
-#
-ifneq ($(BUILD_MACOS_APP_BUNDLE),)
-all: $(TARGET).app
-
-$(TARGET).app: $(TARGET)
-	$(Q)rm -fr $(BUILD)/${TARGET}.app 2> /dev/null
-	$(Q)mkdir -p $(BUILD)/${TARGET}.app/Contents/{MacOS,Resources}
-	$(Q)cp $(BUILD)/$(TARGET) $(BUILD)/${TARGET}.app/Contents/MacOS
-	$(Q)cp $(MACOS_BUNDLE_ICON) $(BUILD)/${TARGET}.app/Contents/Resources/${TARGET}.icns
-	$(Q)cp -r data/* $(BUILD)/${TARGET}.app/Contents/Resources
-	@$(call CREATE_MACOS_APP_BUNDLE,${TARGET}.app/Contents/Info.plist)
-endif
-
-###################################################
 # Link sources
 #
-$(TARGET): $(OBJS) $(THIRDPART_OBJS) $(THIRDPART_LIBS)
+ifneq ($(EXT),)
+$(TARGET): $(TARGET)$(EXT)
+endif
+
+$(TARGET)$(EXT): $(OBJS) $(THIRDPART_OBJS) $(THIRDPART_LIBS)
 ifeq ($(OBJS),)
 	echo "OBJS is empty and you requested to created a target" && exit 1
 endif
 	@$(call print-to,"Linking","$(TARGET)","$(BUILD)/$@","$(VERSION)")
 	$(Q)cd $(BUILD) && $(COMPILER) $(LDFLAGS) $(OBJS) $(THIRDPART_OBJS) -o $@ $(THIRDPART_LIBS) $(NOT_PKG_LIBS) $(PKGCFG_LIBS) $(LINKER_FLAGS)
-ifeq ($(BUILD_TYPE),release)
-  ifneq ($(ARCHI),Darwin)
-	@# See http://reverse.lostrealm.com/protect/strip.html
-	@cd $(BUILD) && strip -R .comment -R .note -R .note.ABI-tag $@
-  endif
+# Strip command: http://reverse.lostrealm.com/protect/strip.html
+ifneq ($(STRIP),)
+	@$(call print-to,"Stripping","$(TARGET)","$(BUILD)/$@","$(VERSION)")
+	$(Q)cd $(BUILD) && $(STRIP) $@
+endif
+# Create MacOS bundle application
+ifneq ($(BUILD_MACOS_APP_BUNDLE),)
+	$(Q)$(call CREATE_MACOS_APP_BUNDLE)
 endif
 
 ###################################################
