--- a/Makefile.flags
+++ b/Makefile.flags
@@ -24,7 +24,7 @@
 ##==================================================================================
 
 ###################################################
-# clang and GCC common compilation flags.
+# Clang and GCC common compilation flags.
 #
 ifeq ($(CCFLAGS),)
 
@@ -286,3 +286,24 @@ INCLUDES := -I$(BUILD) $(INCLUDES)
 #
 CXXFLAGS += $(DLL_CXXFLAGS)
 CCFLAGS += $(DLL_CXXFLAGS)
+
+###################################################
+# Emscripten
+#
+ifneq ($(EMSCRIPTEN),)
+$(warning Compiling with emscripten)
+endif
+
+###################################################
+# Disable strip command
+#
+STRIP := strip -R .comment -R .note -R .note.ABI-tag
+ifneq ($(EMSCRIPTEN),)
+STRIP :=
+endif
+ifeq ($(ARCHI),Darwin)
+STRIP :=
+endif
+ifneq ($(BUILD_TYPE),release)
+STRIP :=
+endif
