--- a/Makefile.header
+++ b/Makefile.header
@@ -24,6 +24,10 @@
 ##==================================================================================
 
 ###################################################
+# Use bash instead of shell
+SHELL := /bin/bash
+
+###################################################
 # Uncomment these two commands for enabling debuging
 #
 #OLD_SHELL := $(SHELL)
