--- a/Makefile.macros
+++ b/Makefile.macros
@@ -110,6 +110,20 @@ DEFINES += \
   -DPROJECT_TEMP_DIR=\"$(PROJECT_TEMP_DIR)\"
 
 ###################################################
+# Create the pkg-config file (if the project is a library)
+#
+define GIT_CLONE
+	if [ ! -d "$(1)" ]; then \
+		mkdir -p "$(1)"; \
+	fi
+	if [ ! -d "$(1)/$(3)" ]; then \
+		source $(M)/download-external-libs.sh "$(ARCHI)" "$(TARGET)" && cd $(1) && cloning $(2)/$(3); \
+	else \
+		echo "Already cloned"; \
+    fi
+endef
+
+###################################################
 # Install files present in the folder $1 in the the
 # folder $2. Optionaly add a filter $3 for selecting
 # desired files.
