--- a/Makefile.flags
+++ b/Makefile.flags
@@ -158,15 +158,11 @@ DLL_LDFLAGS := -shared
 #else
 #DEFINES += -DDLL_LINKAGE="__declspec(dllimport)"
 #endif
-else ifeq ($(ARCHI),MSYS)
-DLL_CXXFLAGS := -fPIC
-DLL_LDFLAGS := -shared
-else ifeq ($(ARCHI),MINGW)
-DLL_CXXFLAGS := -fPIC
-DLL_LDFLAGS := -shared
+ifeq ($(WIN_ENV),MINGW)
 LDFLAGS += -lmingw32
 else
 $(error Unknown shared library file extension for this architecture)
+endif
 endif
 
 ###################################################
