--- a/Makefile.header
+++ b/Makefile.header
@@ -37,13 +37,12 @@ SHELL := /bin/bash
 # Detect the operating system: Unix, OSX and Windows
 # and give a shorter name if needed.
 #
-ifeq ($(OS),Windows_NT)
-ARCHI := Windows
-else
 ARCHI := $(shell sh -c 'uname -s 2>/dev/null || echo Unknown')
-ARCHI := $(patsubst CYGWIN%,Cygwin,$(ARCHI))
-ARCHI := $(patsubst MSYS%,MSYS,$(ARCHI))
-ARCHI := $(patsubst MINGW%,MINGW,$(ARCHI))
+ifeq ($(OS),Windows_NT)
+WIN_ENV := $(patsubst CYGWIN%,Cygwin,$(ARCHI))
+WIN_ENV := $(patsubst MSYS%,MSYS,$(WIN_ENV))
+WIN_ENV := $(patsubst MINGW%,MINGW,$(WIN_ENV))
+ARCHI := Windows
 endif
 
 ###################################################
@@ -138,15 +137,9 @@ $(error ARCHI cannot be set)
 endif
 
 ###################################################
-# echo -e command (not supported by Mac OS X)
+# echo with color
 #
-ifeq ($(ARCHI),Darwin)
-ECHO_COLOR = echo
-else ifeq ($(ARCHI),MINGW)
-ECHO_COLOR = echo
-else
-ECHO_COLOR = echo -e
-endif
+ECHO_COLOR := echo -e
 
 ###################################################
 # Temporary directory
@@ -164,10 +157,6 @@ else ifeq ($(ARCHI),Linux)
 EXT :=
 else ifeq ($(ARCHI),Windows)
 EXT := .exe
-else ifeq ($(ARCHI),MSYS)
-EXT := .exe
-else ifeq ($(ARCHI),MINGW)
-EXT := .exe
 else
 $(error Unknown binary file extension for this architecture)
 endif
@@ -180,10 +169,6 @@ SO := dylib
 else ifeq ($(ARCHI),Linux)
 SO := so
 else ifeq ($(ARCHI),Windows)
-SO := dll
-else ifeq ($(ARCHI),MSYS)
-SO := dll
-else ifeq ($(ARCHI),MINGW)
 SO := dll
 else
 $(error Unknown shared library file extension for this architecture)
@@ -222,6 +207,6 @@ endif
 ###################################################
 # Convert version number into a integer (ie g++-4.9.2 will return 40902)
 #
-COMPILER_VERSION := $(shell echo $(COMPILER_VERSION) | sed -e 's/\.\([0-9][0-9]\)/\1/g' -e 's/\.\([0-9]\)/0\1/g' -e 's/^[0-9]\{3,4\}$$//')
+COMPILER_VERSION := $(shell $(ECHO_COLOR) $(COMPILER_VERSION) | sed -e 's/\.\([0-9][0-9]\)/\1/g' -e 's/\.\([0-9]\)/0\1/g' -e 's/^[0-9]\{3,4\}$$//')
 
 include $(M)/Makefile.macros
