--- a/Makefile.flags
+++ b/Makefile.flags
@@ -75,7 +75,7 @@ ifeq ($(CCFLAGS),)
   CCFLAGS += -DCOMPILER_VERSION=$(COMPILER_VERSION)
 else
 
-$(warning CCFLAGS: You have replaced default compilation flags by your own flags)
+$(warning CCFLAGS: info: You have replaced default compilation flags by your own flags)
 endif
 
 ifeq ($(CXXFLAGS),)
@@ -124,7 +124,7 @@ ifeq ($(CXXFLAGS),)
   CXXFLAGS += -DCOMPILER_VERSION=$(COMPILER_VERSION)
 else
 
-$(warning CXXFLAGS: You have replaced default compilation flags by your own flags)
+$(warning CXXFLAGS: info: You have replaced default compilation flags by your own flags)
 endif
 
 # Creating shared libraries from static ones
