--- a/Makefile.macros
+++ b/Makefile.macros
@@ -106,9 +106,23 @@ DEFINES += \
   -DPROJECT_TEMP_DIR=\"$(PROJECT_TEMP_DIR)\"
 
 ###################################################
-# Create the pkg-config file (if the project is a library)
+# git clone a project (depth=1 non recurse)
 #
-define GIT_CLONE
+define GIT_CLONE_NO_RECURSE
+	if [ ! -d "$(1)" ]; then \
+		mkdir -p "$(1)"; \
+	fi
+	if [ ! -d "$(1)/$(3)" ]; then \
+		source $(M)/download-external-libs.sh "$(ARCHI)" "$(TARGET)" && cd $(1) && cloning_non_recurse $(2)/$(3); \
+	else \
+		echo "Already cloned"; \
+    fi
+endef
+
+###################################################
+# git clone a project (depth=1 and recurse)
+#
+define GIT_CLONE_RECURSE
 	if [ ! -d "$(1)" ]; then \
 		mkdir -p "$(1)"; \
 	fi
