Fix missing destination info when creating OSX bundle app

--- a/Makefile.footer
+++ b/Makefile.footer
@@ -58,7 +58,7 @@ endif
 ifeq ($(ARCHI),Darwin)
 	$(Q)cd $(BUILD) && $(COMPILER) $(LDFLAGS) $(OBJS) $(THIRDPART_OBJS) -o $(TARGET) $(THIRDPART_LIBS) $(NOT_PKG_LIBS) $(PKGCFG_LIBS) $(LINKER_FLAGS)
 ifneq ($(BUILD_MACOS_APP_BUNDLE),)
-	$(Q)$(call CREATE_MACOS_APP_BUNDLE)
+	$(Q)$(call CREATE_MACOS_APP_BUNDLE,$(BUILD)/$(TARGET)$(EXT))
 endif
 else
 	$(Q)cd $(BUILD) && $(COMPILER) $(LDFLAGS) $(OBJS) $(THIRDPART_OBJS) -o $(TARGET)$(EXT) $(THIRDPART_LIBS) $(NOT_PKG_LIBS) $(PKGCFG_LIBS) $(LINKER_FLAGS)
