--- a/Makefile.macros
+++ b/Makefile.macros
@@ -54,27 +54,26 @@ STATIC_LIB_TARGET := $(STATIC_LIB_TARGET_NOVERSION).$(TARGET_VERSION)
 STATIC_LIB_TARGET_MAJOR := $(STATIC_LIB_TARGET_NOVERSION).$(TARGET_MAJOR_VERSION)
 
 ###################################################
-# Define where to install exec, data, libraries,
-# documentation ...
+# Define where to install exec, data, libraries, documentation ...
 #
-BINDIR := $(DESTDIR)$(PREFIX)/bin
-LIBDIR := $(DESTDIR)$(PREFIX)/lib
-DATADIR := $(DESTDIR)$(PREFIX)/share
-INCLDIR := $(DESTDIR)$(PREFIX)/include/$(PROJECT)-$(TARGET_VERSION)
+INSTALL_INCLUDEDIR = $(DESTDIR)$(INCLUDEDIR)/$(PROJECT_LOWER_CASE)/$(TARGET_VERSION)
+INSTALL_LIBDIR = $(DESTDIR)$(LIBDIR)
+INSTALL_BINDIR = $(DESTDIR)$(BINDIR)
+INSTALL_DATADIR = $(DESTDIR)$(DATADIR)
 
 ###################################################
-# Define names for pkg-config file
+# Define where to install pkg-config file
 #
-PKG_DIR := $(LIBDIR)/pkgconfig
-PKG_FILE := $(TARGET_LOWER_CASE)-$(TARGET_VERSION).pc
-SYMBOLIC_PKG_FILE := $(TARGET_LOWER_CASE).pc
+INSTALL_PKGLIBDIR = $(DESTDIR)$(PKGLIBDIR)
+PKG_FILE = $(TARGET_LOWER_CASE)-$(TARGET_VERSION).pc
+SYMBOLIC_PKG_FILE = $(TARGET_LOWER_CASE).pc
 
 ###################################################
 # TODO to be cleaned
 #
-PROJECT_EXE_NO_VERSION := $(BINDIR)/$(TARGET)
+PROJECT_EXE_NO_VERSION := $(INSTALL_BINDIR)/$(TARGET)
 PROJECT_EXE := $(PROJECT_EXE_NO_VERSION)-$(TARGET_VERSION)
-PROJECT_DATA_ROOT := $(DATADIR)/$(PROJECT)/$(TARGET_VERSION)
+PROJECT_DATA_ROOT := $(INSTALL_DATADIR)/$(PROJECT)/$(TARGET_VERSION)
 PROJECT_DATA_PATH := $(PROJECT_DATA_ROOT)/data
 PROJECT_DOC_PATH := $(PROJECT_DATA_ROOT)/$(GENDOC)
 PROJECT_TEMP_DIR := $(TMPDIR)/$(PROJECT)
@@ -173,7 +172,7 @@ endef
 #
 define INSTALL_BINARY
 	@$(call print-to,"Installing","$(BUILD)/$(TARGET)","$(PROJECT_EXE)","")
-	@mkdir -p $(BINDIR)
+	@mkdir -p $(INSTALL_BINDIR)
 	@cp $(BUILD)/$(TARGET) $(PROJECT_EXE)
 	@ln -sf $(PROJECT_EXE) $(PROJECT_EXE_NO_VERSION)
 endef
@@ -232,10 +231,10 @@ endef
 #
 define CREATE_PKG_CONFIG
 	@$(call print-to,"Generating","$(TARGET)","$(1)","")
-	@echo "prefix=$(DESTDIR)$(PREFIX)" > $(BUILD)/$(1)
-	@echo "exec_prefix=$(BINDIR)" >> $(BUILD)/$(1)
+	@echo "prefix=$(PREFIX)" > $(BUILD)/$(1)
+	@echo "exec_prefix=$(PREFIX)" >> $(BUILD)/$(1)
 	@echo "libdir=$(LIBDIR)" >> $(BUILD)/$(1)
-	@echo "includedir=$(INCLDIR)" >> $(BUILD)/$(1)
+	@echo "includedir=$(INCLUDEDIR)/$(PROJECT_LOWER_CASE)/$(TARGET_VERSION)" >> $(BUILD)/$(1)
 	@echo "Name: $(PROJECT)" >> $(BUILD)/$(1)
 	@echo "Description: $(DESCRIPTION)" >> $(BUILD)/$(1)
 	@echo "Version: $(TARGET_VERSION)" >> $(BUILD)/$(1)
@@ -247,10 +246,10 @@ endef
 # Install the pkg-config file (if the project is a library)
 #
 define INSTALL_PKG_CONFIG
-	@$(call print-to,"Installing","pkg-config","$(PKG_DIR)","")
-	@mkdir -p $(PKG_DIR)
-	@install -m 644 $(BUILD)/$(PKG_FILE) $(PKG_DIR)
-	@ln -snf $(PKG_DIR)/$(PKG_FILE) $(PKG_DIR)/$(SYMBOLIC_PKG_FILE)
+	@$(call print-to,"Installing","pkg-config","$(INSTALL_PKGLIBDIR)","")
+	@mkdir -p $(INSTALL_PKGLIBDIR)
+	@install -m 644 $(BUILD)/$(PKG_FILE) $(INSTALL_PKGLIBDIR)
+	@ln -snf $(INSTALL_PKGLIBDIR)/$(PKG_FILE) $(INSTALL_PKGLIBDIR)/$(SYMBOLIC_PKG_FILE)
 endef
 
 ###################################################
@@ -258,25 +257,25 @@ endef
 # is not an application)
 #
 define INSTALL_PROJECT_LIBRARIES
-	@$(call print-to,"Installing","libs","$(LIBDIR)","")
-	@mkdir -p $(LIBDIR)
-	@install -m 644 $(BUILD)/$(STATIC_LIB_TARGET) $(LIBDIR)
-	@ln -snf $(LIBDIR)/$(STATIC_LIB_TARGET) $(LIBDIR)/$(STATIC_LIB_TARGET_NOVERSION)
-	@ln -snf $(LIBDIR)/$(STATIC_LIB_TARGET) $(LIBDIR)/$(STATIC_LIB_TARGET_MAJOR)
-	@install -m 644 $(BUILD)/$(SHARED_LIB_TARGET) $(LIBDIR)
-	@ln -snf $(LIBDIR)/$(SHARED_LIB_TARGET) $(LIBDIR)/$(SHARED_LIB_TARGET_NOVERSION)
-	@ln -snf $(LIBDIR)/$(SHARED_LIB_TARGET) $(LIBDIR)/$(SHARED_LIB_TARGET_MAJOR)
+	@$(call print-to,"Installing","libs","$(INSTALL_LIBDIR)","")
+	@mkdir -p $(INSTALL_LIBDIR)
+	@install -m 644 $(BUILD)/$(STATIC_LIB_TARGET) $(INSTALL_LIBDIR)
+	@ln -snf $(INSTALL_LIBDIR)/$(STATIC_LIB_TARGET) $(INSTALL_LIBDIR)/$(STATIC_LIB_TARGET_NOVERSION)
+	@ln -snf $(INSTALL_LIBDIR)/$(STATIC_LIB_TARGET) $(INSTALL_LIBDIR)/$(STATIC_LIB_TARGET_MAJOR)
+	@install -m 644 $(BUILD)/$(SHARED_LIB_TARGET) $(INSTALL_LIBDIR)
+	@ln -snf $(INSTALL_LIBDIR)/$(SHARED_LIB_TARGET) $(INSTALL_LIBDIR)/$(SHARED_LIB_TARGET_NOVERSION)
+	@ln -snf $(INSTALL_LIBDIR)/$(SHARED_LIB_TARGET) $(INSTALL_LIBDIR)/$(SHARED_LIB_TARGET_MAJOR)
 	@$(call INSTALL_PKG_CONFIG)
 endef
 
 ###################################################
-# Install .hpp files to the $(INCLDIR) folder
+# Install .hpp files to the $(INSTALL_INCLUDEDIR) folder
 # TODO need glob regex
 #
 define INSTALL_PROJECT_HEADERS
-	@$(call print-to,"Installing","headers","$(INCLDIR)","")
-	@$(call INSTALL_FOLDER,include,$(INCLDIR))
-	@$(call INSTALL_FOLDER,src,$(INCLDIR),\
+	@$(call print-to,"Installing","headers","$(INSTALL_INCLUDEDIR)","")
+	@$(call INSTALL_FOLDER,include,$(INSTALL_INCLUDEDIR))
+	@$(call INSTALL_FOLDER,src,$(INSTALL_INCLUDEDIR),\
 	-name "*.[hit]pp" -o -name "*.incl" -o -name "*.h" -o -name "*.hh" -o -name "*.hxx")
 endef
 
@@ -284,15 +283,15 @@ endef
 # Install folder and files of third part libraries
 #
 define INSTALL_THIRDPART_FOLDER
-	@$(call INSTALL_FOLDER,$(THIRDPART)/$(1),$(INCLDIR)/$(2),$(3))
+	@$(call INSTALL_FOLDER,$(THIRDPART)/$(1),$(INSTALL_INCLUDEDIR)/$(2),$(3))
 endef
 
 ###################################################
 # Install files of third part libraries
 #
 define INSTALL_THIRDPART_FILES
-	@$(call print-to,"Installing","$(THIRDPART)/$(1)","$(INCLDIR)/$(2)","")
-	@$(call INSTALL_FILES,$(THIRDPART)/$(1),$(INCLDIR)/$(2),-maxdepth 1 -mindepth 1 $(3))
+	@$(call print-to,"Installing","$(THIRDPART)/$(1)","$(INSTALL_INCLUDEDIR)/$(2)","")
+	@$(call INSTALL_FILES,$(THIRDPART)/$(1),$(INSTALL_INCLUDEDIR)/$(2),-maxdepth 1 -mindepth 1 $(3))
 endef
 
 ###################################################
