--- a/Makefile.flags
+++ b/Makefile.flags
@@ -128,10 +128,8 @@ $(warning CXXFLAGS: info: You have replaced default compilation flags by your ow
 endif
 
 # Creating shared libraries from static ones
-ifeq ($(ARCHI),Darwin)
-  LINK_ALL_LOAD=-Wl,-all_load
-  LINK_NO_ALL_LOAD=-Wl,-noall_load
-else
+# Note: since 2024 -noall_load are removed on MacOS
+ifneq ($(ARCHI),Darwin)
   LINK_ALL_LOAD=-Wl,--whole-archive
   LINK_NO_ALL_LOAD=-Wl,--no-whole-archive
 endif
